--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -28,9 +28,9 @@ jobs:
     - name: build docker image and push to hub
       uses: mr-smithers-excellent/docker-build-push@v6
       with: 
-          image: compilereg/iticgi
+          image: ahmedstahoun/dockerlab
           registry: docker.io
           dockerfile: Dockerfile
           username: "${{ secrets.REPO_USERNAME }}"
           password: "${{ secrets.REPO_PASSWORD }}"
-          tags: latest 
+          tags: tagname 
